[package]
name = "parsers-on-your-browser"
version = "0.1.0"
authors = ["Mizki SUZUMORI <suzumorimizuki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
console_log = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
wee_alloc = "0.4"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]
