[package]
name = "parsers-on-your-browser"
version = "0.1.0"
authors = ["Mizuki HAGIMOTO <hagimotomizuki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1"
console_error_panic_hook = "0.1"
console_log = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.wee_alloc]
version = "0.4"
optional = true
